--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,30 @@
   font-size: 18px;
   cursor: pointer;
 }
+.firma-digital {
+  background-color: #eeeeee; /* Gris claro */
+  border-radius: 5px; /* Bordes redondeados para mejor estética */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para resaltar */
+  margin-top: 20px;
+
+  padding: '5px';
+  border: '1px solid #ddd';
+
+
+}
+
+.signature-canvas {
+  border: 1px solid #ccc; /* Borde alrededor del canvas */
+  background-color: white; /* Fondo blanco para la firma */
+}
+
+.botones-firma button {
+  margin-right: 10px; /* Espaciado entre botones */
+}
+
+.firma-guardada {
+  margin-top: 10px;
+  text-align: center;
+}
+
+
